<resources>
    <string name="app_name">FileManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="copyright">CopyRight@2016</string>

    <!--Directory subfiles-->
    <string name="item_count">%1$d item</string>
    <string name="item_counts">%1$d items</string>

    <!--CategoryButton-->
    <string name="category_num" translatable="false">%1$s</string>
    <!--VolumeInfo-->
    <string name="volume_info_size" translatable="false">%1$s/%2$s</string>

    <!--Audio-->
    <string name="audio_files">Audio Files</string>

    <!--Video-->
    <string name="video_files">Video Files</string>

    <!--Image-->
    <string name="image_files">Image Files</string>

    <!--Document-->
    <string name="document_files">Document Files</string>

    <!--Zip-->
    <string name="zip_files">Zip Files</string>

    <!--Apk-->
    <string name="apk_files">Apk Files</string>

    <!--FileView-->
    <string name="phone">Phone</string>
    <!--Menu Title-->
    <string name="menu_more">More</string>
    <!--SortType-->
    <string name="sort_type">Sort Type</string>
    <string name="sort_by_type">Type</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_by_date">Date</string>

    <!--Select Mode-->
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="rename">Rename</string>
    <string name="detail">Detail</string>

    <!--UnCompress-->
    <string name="uncompress">UnCompress</string>
    <string name="uncompress_to">UnCompress To</string>

    <!--InputNameDialog-->
    <string name="default_hint">Please input the folder name</string>
    <string name="edit_title">Title</string>
    <string name="err_no_edit">Nothing to modify</string>

    <!--LoadingView-->
    <string name="loading">Loading...</string>
    <string name="no_file">No File</string>
</resources>
