<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <!-- <item
        android:id="@+id/action_select_all"
        android:icon="@mipmap/ic_dropdown"
        android:title="@string/select"
        app:showAsAction="always" />-->
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_action_cut"
        android:icon="@drawable/ic_cut_white_24dp"
        android:title="@string/cut"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/menu_more"
        app:showAsAction="always">
        <item
            android:id="@+id/action_copy"
            android:title="@string/copy" />
        <item
            android:id="@+id/action_rename"
            android:title="@string/rename" />
        <item
            android:id="@+id/action_detail"
            android:title="@string/detail" />

    </item>
</menu>